--- a/front/package.json
+++ b/front/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueuse/core": "^13.0.0",
     "axios": "^1.8.4",
     "core-js": "^3.8.3",
+    "element-plus": "^2.9.7",
     "pdfjs-dist": "^4.8.69",
     "vue": "^3.2.13",
+    "vue-pdf-embed": "^2.1.2",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
