--- a/front/package.json
+++ b/front/package.json
@@ -12,9 +12,8 @@
     "axios": "^1.8.4",
     "core-js": "^3.8.3",
     "element-plus": "^2.9.7",
-    "pdfjs-dist": "^4.8.69",
+    "pdfjs-dist": "2.6.347",
     "vue": "^3.2.13",
-    "vue-pdf-embed": "^2.1.2",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
